Fix bugs
- Add extra space below “Best departing flights”
- Remove design inconsisancy in buttons
- Reduce box shadow on page 2
- Add seperator between travel time and stop count
- Add more spacing above “Flight Details”

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,6 +50,13 @@ body {
 #loader {
   height: 50px;
 }
+
+.vr {
+  width: 2px;
+  opacity: 0.75;
+  height: 1.5em;
+}
+
 @media (min-width: 768px) {
   .flight-search {
     height: 100vh;
